Update color of enter password to confirm and checked the auto-logout by default

--- a/gamemaster.html
+++ b/gamemaster.html
@@ -87,7 +87,7 @@
                         <h3>⚠️ Danger Zone</h3>
                         <p class="info-detail">Permanently delete all challenger data. This action cannot be undone!</p>
                         <div class="form-group" style="margin-top: 15px;">
-                            <label for="deletePassword">Enter Password to Confirm:</label>
+                            <label for="deletePassword" style="color: black;">Enter Password to Confirm:</label>
                             <input type="password" id="deletePassword" placeholder="Enter your password">
                         </div>
                         <button class="btn btn-danger" onclick="deleteAllData()" style="margin-top: 10px;">🗑️ Delete All Challenger Data</button>
